fixed some alignment of inputs in sign-up form

--- a/home.css
+++ b/home.css
@@ -136,20 +136,19 @@ li {
 
 #sign-up h2 {
 	font-size: 36px;
-	padding: 20px 0px 20px 0px;
+	padding: 20px 0px 20px 5px;
 }
 
 .form-row {
 	width: 100%;
 	display: flex;
-	justify-content: flex-start;
-	padding: 5px 15px 5px 0px;
+  justify-content: flex-start;
+	padding-bottom: 15px;
 }
 
-.form-row:nth-child(1n) {
-	flex-grow: 1:
-}
-
-#sign-up-btn {
+.form-row input[type="text"],
+.form-row input[type="email"],
+.form-row input[type="password"] {
 	width: 100%;
+  margin: 0px 5px;
 }
